Se corrigieron estilos y anadieron animaciones a los componentes html

--- a/src/app/components/archive/archive.component.html
+++ b/src/app/components/archive/archive.component.html
@@ -1,4 +1,4 @@
-<section class="section archive">
+<section class="section archive" [@archiveAnimation] *ngIf='state'>
     <div class="container">
         <div class="archive-title">
             <h1 class="big-title">Proyectos</h1>
