--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -1,22 +1,25 @@
 <section class="section banner">
     <div class="container">
-        <div class="section-box-banner">
+        <div class="section-box-banner" [@aniBoton]='state' *ngIf='state'>
             <div>
-                <h1>Hola, mi nombre es</h1>
+                <div>
+                    <h1>Hola, mi nombre es</h1>
+                </div>
+                <div class='banner-title' >
+                    <h2>José Hernández.</h2>
+                    <h3>Web Developer</h3>
+                </div>
+                <div class='banner-description' >
+                    <p class="mt-4">
+                        Soy desarollador web con 5 años de experiencia en desarrollo de sistemas, 
+                        bots y sitios web. Me gusta abordar proyectos con tecnologías basadas en Laravel, 
+                        Angular y Wordpress.
+                    </p>
+                </div>
             </div>
-            <div class='banner-title'>
-                <h2>José Hernández.</h2>
-                <h3>Web Developer</h3>
-            </div>
-            <div class='banner-description'>
-                <p class="mt-4">
-                    Soy desarollador web con 5 años de experiencia en desarrollo de sistemas, 
-                    bots y sitios web. Me gusta abordar proyectos con tecnologías basadas en Laravel, 
-                    Angular y Wordpress.
-                </p>
-            </div>
-            <div class="div-btn-banner">
-                <a class="banner-btn" href="mailto:joseandreshernandezross@gmail.com">¡Saludame!</a>
+            <div class="div-btn-banner" >
+                <!-- href="mailto:joseandreshernandezross@gmail.com" -->
+                <a class="banner-btn">¡Saludame!</a>
             </div>
         </div>
     </div>
