--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -1,14 +1,14 @@
 <section class="section contact" id='contact'>
     <div class="container">
         <div class="section-box">
-            <div class="about-title mb-4">
+            <div class="about-title mb-4" data-aos="fade-up" data-aos-duration="1000">
                 <h3 class="contact-pre-title big-subtitle">05. Y... ¿Ahora?</h3>
                 <h4 class="e-font contact-title big-title">
                     ¡Saludame!
                 </h4>
             </div>
-            <p>Although I'm not currently looking for any new opportunities, my inbox is always open. Whether you have a question or just want to say hi, I'll try my best to get back to you!</p>
-            <a href="mailto:joseandreshernandezross@gmail.com" target="_blank" class="contact-btn">
+            <p data-aos="fade-up" data-aos-duration="1000">Although I'm not currently looking for any new opportunities, my inbox is always open. Whether you have a question or just want to say hi, I'll try my best to get back to you!</p>
+            <a href="mailto:joseandreshernandezross@gmail.com" target="_blank" class="contact-btn" data-aos="fade-up" data-aos-duration="1000">
                 Say Hello
             </a>
         </div>
