--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -1,13 +1,13 @@
 <section class="section about" id='proyects'>
     <div class="container">
         <div class="section-box">
-            <div class="about-title">
+            <div class="about-title" data-aos="fade-up" data-aos-duration="1000">
                 <h3 class="e-font section-title">
                     <span class='code-font n-section-title'>03.</span> Mis proyectos
                 </h3>
             </div>
             
-            <div class="d-flex proyect-container">
+            <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
                     <div class="img-feature-proyect-box">
                         <img class='img-feature-proyect' src="https://dummyimage.com/600x360/000/fff" alt="">
@@ -34,7 +34,7 @@
                 </div>
             </div>
             
-            <div class="d-flex proyect-container">
+            <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="proyect-info-left h-100" style="background-image: url('https://dummyimage.com/600x360/000/fff');">
                     <div class="proyect-box">
                             <h4 class="text-left feature-proyect">Proyecto Destacado</h4>
@@ -54,14 +54,14 @@
                             </div>
                     </div>
                 </div>
-                <div class="img-feature-proyect-container">
+                <div class="img-feature-proyect-container" data-aos="fade-up" data-aos-duration="1000">
                     <div class="img-feature-proyect-box">
                         <img class='img-feature-proyect' src="https://dummyimage.com/600x360/000/fff" alt="">
                     </div>
                 </div>
             </div>
             
-            <div class="d-flex proyect-container">
+            <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
                     <div class="img-feature-proyect-box">
                         <img class='img-feature-proyect' src="https://dummyimage.com/600x360/000/fff" alt="">
