Se genero el contenido personalizado

--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -5,7 +5,7 @@
                 <div>
                     <h1>Hola, mi nombre es</h1>
                 </div>
-                <div class='banner-title' >
+                <div class='banner-title'>
                     <h2>José Hernández.</h2>
                     <h3>Web Developer</h3>
                 </div>
@@ -19,7 +19,7 @@
             </div>
             <div class="div-btn-banner" >
                 <!-- href="mailto:joseandreshernandezross@gmail.com" -->
-                <a class="banner-btn">¡Saludame!</a>
+                <a href="mailto:joseandreshernandezross@gmail.com" class="banner-btn">¡Saludame!</a>
             </div>
         </div>
     </div>
