--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -7,9 +7,11 @@
                     ¡Saludame!
                 </h4>
             </div>
-            <p data-aos="fade-up" data-aos-duration="1000">Although I'm not currently looking for any new opportunities, my inbox is always open. Whether you have a question or just want to say hi, I'll try my best to get back to you!</p>
+            <p data-aos="fade-up" data-aos-duration="1000">
+                Estaré encantado de recibir tu contacto si quieres conversar acerca de nuevas oportunidades. Escribeme, y te respondere tan pronto como vea tu mensaje.
+            </p>
             <a href="mailto:joseandreshernandezross@gmail.com" target="_blank" class="contact-btn" data-aos="fade-up" data-aos-duration="1000">
-                Say Hello
+                Contacto
             </a>
         </div>
     </div>
