--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -10,53 +10,56 @@
             <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
                     <div class="img-feature-proyect-box">
-                        <img class='img-feature-proyect' src="https://dummyimage.com/600x360/000/fff" alt="">
+                        <img class='img-feature-proyect rounded' src="assets/images/abaco-proyect.png" alt="" width='600px'>
                     </div>
                 </div>
-                <div class="proyect-info-right h-100" style="background-image: url('https://dummyimage.com/600x360/000/fff');">
+                <div class="proyect-info-right h-100" style="background-image: url('assets/images/abaco-proyect.png');">
                     <div class="proyect-box">
                             <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
-                            <h5 class="text-right proyect-name">Proyeto 1</h5>
+                            <h5 class="text-right proyect-name">Abaco</h5>
 
                             <div class="proyect-description-box">
-                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime at soluta itaque, numquam quis debitis deserunt voluptatibus? Reprehenderit nisi alias vitae omnis, quo necessitatibus odit temporibus nobis? </p>
+                                <p class="mb-0">Una aplicion web encargada de la gestion de datos de clientes y proveedores turistico. Su desarrollo fue junto al equipo de Moebius (Empresa Argentina de Turismo). Fui arquitecto de software como fullstack</p>
                             </div>
                             <ul class="proyect-skills justify-content-end">
-                                <li class="ml-3">Next.js</li>
-                                <li class="ml-3">Chart.js</li>
-                                <li class="ml-3">GitHub API</li>
+                                <li class="ml-3">Laravel 5</li>
+                                <li class="ml-3">Angular 9</li>
+                                <li class="ml-3">SASS</li>
+                                <li class="ml-3">Materialize</li>
+                                <li class="ml-3">GIT</li>
                             </ul>
                             <div class="proyect-links text-right">
-                                <i class="ml-3 fab fa-github"></i>
-                                <i class="ml-3 fas fa-external-link-alt"></i>
+                                <!-- <i class="ml-3 fab fa-github"></i> -->
+                                <a style='color: inherit' href="https://abaco.damplix.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
             </div>
             
             <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
-                <div class="proyect-info-left h-100" style="background-image: url('https://dummyimage.com/600x360/000/fff');">
+                <div class="proyect-info-left h-100" style="background-image: url('assets/images/cronometraje-proyect.png')">
                     <div class="proyect-box">
                             <h4 class="text-left feature-proyect">Proyecto Destacado</h4>
-                            <h5 class="text-left proyect-name">Proyeto 1</h5>
+                            <h5 class="text-left proyect-name">Cronometraje</h5>
 
                             <div class="proyect-description-box">
-                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime at soluta itaque, numquam quis debitis deserunt voluptatibus? Reprehenderit nisi alias vitae omnis, quo necessitatibus odit temporibus nobis? </p>
+                                <p class="mb-0">Una Aplicación web desarrollada para la gestion de datos deportivos para una empresa Argentina. Me encargue del desarrollo en todos los aspectos, desde la planificacion hasta la ejecucion, empezando por el frontend y recorriendo toda su arquitectura hasta la base de datos</p>
                             </div>
                             <ul class="proyect-skills justify-content-star">
-                                <li class="mr-3">Next.js</li>
-                                <li class="mr-3">Chart.js</li>
-                                <li class="mr-3">GitHub API</li>
+                                <li class="mr-3">Laravel 5</li>
+                                <li class="mr-3">Webpack</li>
+                                <li class="mr-3">Bootstrap</li>
+                                <li class="mr-3">Git</li>
                             </ul>
                             <div class="proyect-links text-left">
-                                <i class="mr-3 fab fa-github"></i>
-                                <i class="mr-3 fas fa-external-link-alt"></i>
+                                <a style='color: inherit' href="https://github.com/andresjosehr/Cronometraje" target="_blank"><i class="ml-3 fab fa-github"></i></a>
+                                <a style='color: inherit' href="https://cronometraje.damplix.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
                 <div class="img-feature-proyect-container" data-aos="fade-up" data-aos-duration="1000">
                     <div class="img-feature-proyect-box">
-                        <img class='img-feature-proyect' src="https://dummyimage.com/600x360/000/fff" alt="">
+                        <img class='img-feature-proyect rounded' src="assets/images/cronometraje-proyect.png" alt="" width='600px'>
                     </div>
                 </div>
             </div>
@@ -64,25 +67,27 @@
             <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
                     <div class="img-feature-proyect-box">
-                        <img class='img-feature-proyect' src="https://dummyimage.com/600x360/000/fff" alt="">
+                        <img class='img-feature-proyect rounded' src="assets/images/tugo-proyect.png" alt="" width='600px'>
                     </div>
                 </div>
-                <div class="proyect-info-right h-100" style="background-image: url('https://dummyimage.com/600x360/000/fff');">
+                <div class="proyect-info-right h-100" style="background-image: url('assets/images/tugo-proyect.png');">
                     <div class="proyect-box">
                             <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
-                            <h5 class="text-right proyect-name">Proyeto 1</h5>
+                            <h5 class="text-right proyect-name">Tugo</h5>
 
                             <div class="proyect-description-box">
-                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime at soluta itaque, numquam quis debitis deserunt voluptatibus? Reprehenderit nisi alias vitae omnis, quo necessitatibus odit temporibus nobis? </p>
+                                <p class="mb-0">Sitio web desarrollado para una startup de mochileros. Realizada bajo la direccion del equipo de TechLatam (Empresa en la cual trabaje como frontend). De igual manera, la mayor parte del proyecto tuvo que ver con desarrollo frontend</p>
                             </div>
                             <ul class="proyect-skills justify-content-end">
-                                <li class="ml-3">Next.js</li>
-                                <li class="ml-3">Chart.js</li>
-                                <li class="ml-3">GitHub API</li>
+                                <li class="ml-3">Wordpress codex</li>
+                                <li class="ml-3">Gulp</li>
+                                <li class="ml-3">Bulma</li>
+                                <li class="ml-3">SASS</li>
+                                <li class="ml-3">GIT</li>
                             </ul>
                             <div class="proyect-links text-right">
-                                <i class="ml-3 fab fa-github"></i>
-                                <i class="ml-3 fas fa-external-link-alt"></i>
+                                <a style='color: inherit' href="https://github.com/andresjosehr/Tugo" target="_blank"><i class="ml-3 fab fa-github"></i></a>
+                                <a style='color: inherit' href="https://tugo.damplix.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
