--- a/src/app/components/archive/archive.component.html
+++ b/src/app/components/archive/archive.component.html
@@ -18,168 +18,109 @@
                 <tbody>
                     <tr data-sr-id="3">
                         <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
+                        <td class="proyect-title">Sistem web Avicola</td>
+                        <td class="proyect-company"><span>Monagas - VE</span></td>
                         <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
+                            <span>Laravel<span class="separator">·</span></span>
+                            <span>Webpack</span>
                         </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
+                        <td class="proyect-links">
+                            <span><a style='color: inherit' href="https://github.com/andresjosehr/Avicola"><i class="ml-4 fab fa-github"></i></a></span>
+                            <span><a style='color: inherit' href="http://avicola.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                        </td>
                     </tr>
                     <tr data-sr-id="3">
                         <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
+                        <td class="proyect-title">Cenem</td>
+                        <td class="proyect-company"><span>Monagas - VE</span></td>
                         <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
+                            <span>Wordpress<span class="separator">·</span></span>
+                            <span>Divi</span>
                         </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
+                        <td class="proyect-links">
+                            <span><a style='color: inherit' href="http://cenem.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                        </td>
                     </tr>
                     <tr data-sr-id="3">
                         <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
+                        <td class="proyect-title">ClerckContable</td>
+                        <td class="proyect-company"><span>Caracas - VE</span></td>
                         <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
+                            <span>HTML<span class="separator">·</span></span>
+                            <span>CSS</span>
                         </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
+                        <td class="proyect-links">
+                            
+                            <span><a style='color: inherit' href="https://github.com/andresjosehr/Clerkcontable"><i class="ml-4 fab fa-github"></i></a></span>
+                            <span><a style='color: inherit' href="https://clerckcontable.damplix.com"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                        </td>
                     </tr>
                     <tr data-sr-id="3">
                         <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
+                        <td class="proyect-title">Innerfire</td>
+                        <td class="proyect-company"><span>Monagas - VE</span></td>
                         <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
+                            <span>Wordpress<span class="separator">·</span></span>
+                            <span>HTML<span class="separator">·</span></span>
+                            <span>CSS</span>
                         </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
+                        <td class="proyect-links">
+                            <span><a style='color: inherit' href="http://innerfire.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                        </td>
                     </tr>
                     <tr data-sr-id="3">
                         <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
+                        <td class="proyect-title">Inver</td>
+                        <td class="proyect-company"><span>Monagas - VE</span></td>
                         <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
+                            <span>Wordpress<span class="separator">·</span></span>
+                            <span>HTML<span class="separator">·</span></span>
+                            <span>CSS</span>
                         </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
+                        <td class="proyect-links">
+                            <span><a style='color: inherit' href="https://github.com/andresjosehr/inver-content/"><i class="ml-4 fab fa-github"></i></a></span>
+                            <span><a style='color: inherit' href="http://inver.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                        </td>
                     </tr>
                     <tr data-sr-id="3">
                         <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
+                        <td class="proyect-title">Persimas</td>
+                        <td class="proyect-company"><span>Caracas - VE</span></td>
                         <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
+                            <span>Bootstrap<span class="separator">·</span></span>
+                            <span>HTML<span class="separator">·</span></span>
+                            <span>CSS</span>
                         </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
+                        <td class="proyect-links">
+                            <span><a style='color: inherit' href="https://github.com/andresjosehr/Persimas"><i class="ml-4 fab fa-github"></i></a></span>
+                            <span><a style='color: inherit' href="https://persimas.damplix.com"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                        </td>
                     </tr>
                     <tr data-sr-id="3">
                         <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
+                        <td class="proyect-title">Rodrigo</td>
+                        <td class="proyect-company"><span>Caracas - VE</span></td>
                         <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
+                            <span>Bootstrap<span class="separator">·</span></span>
+                            <span>HTML<span class="separator">·</span></span>
+                            <span>CSS</span>
                         </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
+                        <td class="proyect-links">
+                            <span><a style='color: inherit' href="https://github.com/andresjosehr/Rodrigo"><i class="ml-4 fab fa-github"></i></a></span>
+                            <span><a style='color: inherit' href="https://rodrigo.damplix.com"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                        </td>
                     </tr>
                     <tr data-sr-id="3">
                         <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
+                        <td class="proyect-title">Salud al Dia</td>
+                        <td class="proyect-company"><span>Caracas - VE</span></td>
                         <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
+                            <span>Wordpress<span class="separator">·</span></span>
+                            <span>Divi</span>
                         </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
-                    </tr>
-                    <tr data-sr-id="3">
-                        <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
-                        <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
+                        <td class="proyect-links">
+                            <span><a style='color: inherit' href="https://saludaldia.damplix.com"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
                         </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
-                    </tr>
-                    <tr data-sr-id="3">
-                        <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
-                        <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
-                        </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
-                    </tr>
-                    <tr data-sr-id="3">
-                        <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
-                        <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
-                        </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
-                    </tr>
-                     <tr data-sr-id="3">
-                        <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
-                        <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
-                        </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
-                    </tr>
-                    <tr data-sr-id="3">
-                        <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
-                        <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
-                        </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
-                    </tr>
-                     <tr data-sr-id="3">
-                        <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
-                        <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
-                        </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
-                    </tr>
-                    <tr data-sr-id="3">
-                        <td class="proyect-date">2020</td>
-                        <td class="proyect-title">Integrating Algolia Search with WordPress Multisite</td>
-                        <td class="proyect-company"><span>Upstatement</span></td>
-                        <td class="proyect-skills">
-                            <span>Algolia<span class="separator">·</span></span>
-                            <span>WordPress<span class="separator">·</span></span>
-                            <span>PHP</span>
-                        </td>
-                        <td class="proyect-links"><span><a href="https://medium.com/stories-from-upstatement/integrating-algolia-search-with-wordpress-multisite-e2dea3ed449c" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"></a></span></td>
                     </tr>
                 </tbody>
             </table>
