--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -9,134 +9,127 @@
             </div>
             <div class="jobs-container mt-5">
                 <div class="row p-0">
-                    <div class="col-12 col-md-6 col-lg-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
+                                    <a style='color: inherit' href="https://pollero.damplix.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/ElPollero" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
+                                <h5 class="other-proyect-title mt-4">El Pollero</h5>
+                                <p class="other-proyect-description">Aplicacion para gestion de ventas de pollo, abarcando la planificacion y programación del proyecto. Fue realmente rapido el desarrollo, entregandolo al cliente en un periodo de dos semanas a partir del momento en que se empezo a desarrollar.</p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
+                                    <li>Laravel</li>
+                                    <li>Webpack</li>
+                                    <li>Bootstrap</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/ElPollero" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
+                                <h5 class="other-proyect-title mt-4">Workbot</h5>
+                                <p class="other-proyect-description">Este es un bot de telegram desarrollado bajo la arquitectura de laravel. Un proyecto personal que surgio de la necesidad de poder tener notificaciones en tiempo real de workana para saber acerca de nuevos proyectos.</p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
+                                    <li>Laravel</li>
+                                    <li>Guzzle</li>
+                                    <li>Tlgm API</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
+                                    <a style='color: inherit' href="https://switchx-wallet.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/Switchx_wallet_plantilla"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
+                                <h5 class="other-proyect-title mt-4">Switchx Wallet</h5>
+                                <p class="other-proyect-description">Sitio web realizado para una startup de criptomonedas. El desarrollo fue mayormente en parte de frontend, aunque en ciertas medidas era necesario tener conocimientos de PHP</p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
+                                    <li>Wordpress</li>
+                                    <li>Bulma</li>
+                                    <li>SASS</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
+                                    <a style='color: inherit' href="http://artnevents.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
+                                <h5 class="other-proyect-title mt-4">Artnevents</h5>
+                                <p class="other-proyect-description">Se basa en un sistema para una startup que se encarga de conectar artistas con cazadores de talentos. Cuenta con una landingpage y un dashboard para todos los roles de usuario</p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
+                                    <li>Wordpress</li>
+                                    <li>Bootstrap</li>
+                                    <li>CSS</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
-                                    <img src='assets/icons/folder.svg' width="40">
+                                    <img  src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
+                                    <a style='color: inherit' href="https://github.com/andresjosehr/cofascraper"><i class="ml-4 fab fa-github"></i></a>
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
+                                <h5 class="other-proyect-title mt-4">Cofascraper</h5>
+                                <p class="other-proyect-description">Un proyecto personal realizado en laravel que surgio de la necesidad de descargar una gran cantidad de contenido multimedia. Un web scrapping que hace dicho trabajo</p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
+                                    <li>Laravel</li>
+                                    <li>Guzzle</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
                             <div class="row w-100 text-left m-0 p-0">
                                 <div class="col-6 p-0">
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <i class="ml-4 fab fa-github"></i>
-                                    <i class="ml-4 fas fa-external-link-alt"></i>
+                                    <a style='color: inherit' href="http://luzzudigital.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                 </div>
-                                <h5 class="other-proyect-title mt-4">Apple Music Embeddable Web Player Widget</h5>
-                                <p class="other-proyect-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit cum ab maiores, suscipit itaque. Laboriosam, enim et.</p>
+                                <h5 class="other-proyect-title mt-4">Luzzidigital</h5>
+                                <p class="other-proyect-description">Proyecto desarrollado para una marca personal de margeting digital. Desarrollada aprovechando las bondades que ofrecen los plugins de wordpress para este fin</p>
                             </div>
                             <div>
                                 <ul class="more-proyects-skills">
-                                    <li>Next.js</li>
-                                    <li>Tailwind CSS</li>
-                                    <li>Firebase</li>
+                                    <li>Wordpress</li>
                                 </ul>
                             </div>
                         </div>
