--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar main-navbar on-top" [class.nav-shadow]='this.pageYPosition>0' [@animateMenu]='state' *ngIf='state'>
-    <a class="navbar-brand text-light" [routerLink]="'inicio'">Jose Andres</a>
+  <div class="container">
+    <a class="navbar-brand text-light" [routerLink]="'inicio'">
+      <img src='assets/images/logo.png' width='25' />
+    </a>
     <ul ngbNav #nav="ngbNav">
         <li ngbNavItem>
             <a ngbNavLink (click)='scroll("about")'><span class='nav-number'>01.</span> Acerca de mi</a>
@@ -51,4 +54,5 @@
           </nav>
       </aside>
     </div>
+  </div>
 </nav>
