Styles fixed. It was changed from css to scss

--- a/src/app/components/archive/archive.component.html
+++ b/src/app/components/archive/archive.component.html
@@ -26,7 +26,7 @@
                         </td>
                         <td class="proyect-links">
                             <span><a style='color: inherit' href="https://github.com/andresjosehr/Avicola"><i class="ml-4 fab fa-github"></i></a></span>
-                            <span><a style='color: inherit' href="http://avicola.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                            <span><a style='color: inherit' href="http://avicola.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
                         </td>
                     </tr>
                     <tr data-sr-id="3">
@@ -38,7 +38,7 @@
                             <span>Divi</span>
                         </td>
                         <td class="proyect-links">
-                            <span><a style='color: inherit' href="http://cenem.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                            <span><a style='color: inherit' href="http://cenem.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
                         </td>
                     </tr>
                     <tr data-sr-id="3">
@@ -52,7 +52,7 @@
                         <td class="proyect-links">
                             
                             <span><a style='color: inherit' href="https://github.com/andresjosehr/Clerkcontable"><i class="ml-4 fab fa-github"></i></a></span>
-                            <span><a style='color: inherit' href="https://clerckcontable.damplix.com"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                            <span><a style='color: inherit' href="https://clerckcontable.luzzidigital.fav"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
                         </td>
                     </tr>
                     <tr data-sr-id="3">
@@ -65,7 +65,7 @@
                             <span>CSS</span>
                         </td>
                         <td class="proyect-links">
-                            <span><a style='color: inherit' href="http://innerfire.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                            <span><a style='color: inherit' href="http://innerfire.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
                         </td>
                     </tr>
                     <tr data-sr-id="3">
@@ -79,7 +79,7 @@
                         </td>
                         <td class="proyect-links">
                             <span><a style='color: inherit' href="https://github.com/andresjosehr/inver-content/"><i class="ml-4 fab fa-github"></i></a></span>
-                            <span><a style='color: inherit' href="http://inver.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                            <span><a style='color: inherit' href="http://inver.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
                         </td>
                     </tr>
                     <tr data-sr-id="3">
@@ -93,7 +93,7 @@
                         </td>
                         <td class="proyect-links">
                             <span><a style='color: inherit' href="https://github.com/andresjosehr/Persimas"><i class="ml-4 fab fa-github"></i></a></span>
-                            <span><a style='color: inherit' href="https://persimas.damplix.com"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                            <span><a style='color: inherit' href="https://persimas.luzzidigital.fav"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
                         </td>
                     </tr>
                     <tr data-sr-id="3">
@@ -107,7 +107,7 @@
                         </td>
                         <td class="proyect-links">
                             <span><a style='color: inherit' href="https://github.com/andresjosehr/Rodrigo"><i class="ml-4 fab fa-github"></i></a></span>
-                            <span><a style='color: inherit' href="https://rodrigo.damplix.com"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                            <span><a style='color: inherit' href="https://rodrigo.luzzidigital.fav"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
                         </td>
                     </tr>
                     <tr data-sr-id="3">
@@ -119,7 +119,7 @@
                             <span>Divi</span>
                         </td>
                         <td class="proyect-links">
-                            <span><a style='color: inherit' href="https://saludaldia.damplix.com"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
+                            <span><a style='color: inherit' href="https://saludaldia.luzzidigital.fav"><i class="ml-4 fas fa-external-link-alt"></i></a></span>
                         </td>
                     </tr>
                 </tbody>
