--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="section-box">
             <div class="about-title" data-aos="fade-up">
-                <h3 class="e-font section-title">
-                    <span class='code-font n-section-title'>01.</span> Acerca de mi
+                <h3 class="section-title">
+                    <span class='n-section-title'>01.</span> Acerca de mi
                 </h3>
             </div>
             <div class="row">
