--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -18,8 +18,7 @@
                 </div>
             </div>
             <div class="div-btn-banner" >
-                <!-- href="mailto:joseandreshernandezross@gmail.com" -->
-                <a href="mailto:joseandreshernandezross@gmail.com" class="banner-btn">¡Saludame!</a>
+                <a href="mailto:joseandreshernandezross@gmail.com" class="main-btn">¡Saludame!</a>
             </div>
         </div>
     </div>
