--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -1,7 +1,7 @@
 <section class="section contact" id='contact'>
     <div class="container">
         <div class="section-box">
-            <div class="about-title mb-4" data-aos="fade-up" data-aos-duration="1000">
+            <div class="mb-4" data-aos="fade-up" data-aos-duration="1000">
                 <h3 class="contact-pre-title big-subtitle">05. Y... ¿Ahora?</h3>
                 <h4 class="e-font contact-title big-title">
                     ¡Saludame!
@@ -10,9 +10,11 @@
             <p data-aos="fade-up" data-aos-duration="1000">
                 Estaré encantado de recibir tu contacto si quieres conversar acerca de nuevas oportunidades. Escribeme, y te respondere tan pronto como vea tu mensaje.
             </p>
-            <a href="mailto:joseandreshernandezross@gmail.com" target="_blank" class="contact-btn" data-aos="fade-up" data-aos-duration="1000">
-                Contacto
-            </a>
+            <div class="mt-5">
+                <a href="mailto:joseandreshernandezross@gmail.com" target="_blank" class="main-btn" data-aos="fade-up" data-aos-duration="1000">
+                    Contacto
+                </a>
+            </div>
         </div>
     </div>
 </section>
