--- a/src/app/components/home/jobs/jobs.component.html
+++ b/src/app/components/home/jobs/jobs.component.html
@@ -1,4 +1,4 @@
-<section class="section about jobs" id='jobs'>
+<section class="section jobs" id='jobs'>
     <div class="container">
         <div class="section-box">
             <div class="about-title mb-5" data-aos="fade-up" data-aos-duration="1000">
