--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -1,13 +1,12 @@
-<section class="section about">
+<section class="section more-proyects">
     <div class="container">
         <div class="section-box">
-            <div class="about-title">
-                <h3 class="e-font section-title">
-                    <span class='code-font n-section-title'>04.</span> Otros proyectos
+            <div class="">
+                <h3 class="section-title">
+                    <span class='n-section-title'>04.</span> Otros proyectos
                 </h3>
-                <!-- <a href="#" class="see-all-proyects"> Ver Todos</a> -->
             </div>
-            <div class="jobs-container mt-5">
+            <div class="mt-5">
                 <div class="row p-0">
                     <div class="col-12 col-md-6 col-lg-6 col-xl-4 proyect-col" data-aos="fade-up" data-aos-duration="1000">
                         <div class="more-proyect-box">
@@ -16,7 +15,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://pollero.damplix.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://pollero.luzzidigital.fav" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://github.com/andresjosehr/ElPollero" target="_blank"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">El Pollero</h5>
@@ -59,7 +58,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="https://switchx-wallet.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="https://switchx-wallet.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                     <a style='color: inherit' href="https://github.com/andresjosehr/Switchx_wallet_plantilla"><i class="ml-4 fab fa-github"></i></a>                                    
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Switchx Wallet</h5>
@@ -81,7 +80,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="http://artnevents.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="http://artnevents.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Artnevents</h5>
                                 <p class="other-proyect-description">Se basa en un sistema para una startup que se encarga de conectar artistas con cazadores de talentos. Cuenta con una landingpage y un dashboard para todos los roles de usuario</p>
@@ -122,7 +121,7 @@
                                     <img src='assets/icons/folder.svg' width="40">
                                 </div>
                                 <div class="col-6 d-flex p-0 justify-content-end">
-                                    <a style='color: inherit' href="http://luzzudigital.damplix.com/"><i class="ml-4 fas fa-external-link-alt"></i></a>
+                                    <a style='color: inherit' href="http://luzzudigital.luzzidigital.fav/"><i class="ml-4 fas fa-external-link-alt"></i></a>
                                 </div>
                                 <h5 class="other-proyect-title mt-4">Luzzidigital</h5>
                                 <p class="other-proyect-description">Proyecto desarrollado para una marca personal de margeting digital. Desarrollada aprovechando las bondades que ofrecen los plugins de wordpress para este fin</p>
@@ -137,10 +136,8 @@
                 </div>
                 
             </div>
-            <div class="w-100 text-center">
-                <a [routerLink]="'/proyectos'">
-                    <button class="show-works-btn">Ver todo</button>
-                </a>
+            <div class="w-100 text-center mt-5 pt-5">
+                <a [routerLink]="'/proyectos'" class='main-btn'>Ver todo</a>
             </div>
         </div>
     </div>
