--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -1,15 +1,15 @@
-<section class="section about" id='proyects'>
+<section class="section proyects" id='proyects'>
     <div class="container">
         <div class="section-box">
-            <div class="about-title" data-aos="fade-up" data-aos-duration="1000">
-                <h3 class="e-font section-title">
-                    <span class='code-font n-section-title'>03.</span> Mis proyectos
+            <div data-aos="fade-up" data-aos-duration="1000">
+                <h3 class="section-title">
+                    <span class='n-section-title'>03.</span> Mis proyectos
                 </h3>
             </div>
             
             <div class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="img-feature-proyect-container">
-                    <div class="img-feature-proyect-box">
+                    <div>
                         <img class='img-feature-proyect rounded' src="assets/images/abaco-proyect.png" alt="" width='600px'>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                             </ul>
                             <div class="proyect-links text-right">
                                 <!-- <i class="ml-3 fab fa-github"></i> -->
-                                <a style='color: inherit' href="https://abaco.damplix.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                <a style='color: inherit' href="https://abaco.luzzidigital.fav" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                             </ul>
                             <div class="proyect-links text-left">
                                 <a style='color: inherit' href="https://github.com/andresjosehr/Cronometraje" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a style='color: inherit' href="https://cronometraje.damplix.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                <a style='color: inherit' href="https://cronometraje.luzzidigital.fav" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                             </ul>
                             <div class="proyect-links text-right">
                                 <a style='color: inherit' href="https://github.com/andresjosehr/Tugo" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                                <a style='color: inherit' href="https://tugo.damplix.com" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                                <a style='color: inherit' href="https://tugo.luzzidigital.fav" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
                             </div>
                     </div>
                 </div>
